<resources>
    <string name="app_name">Firebase</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="please_sign_in_to_continue">Please Login to continue</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_up">Don\'t have an account? Sign Up</string>
    <string name="sign_up1">Sign Up</string>
    <string name="number">Number</string>
    <string name="name">Name</string>
    <string name="welcome_to_our_app">Welcome to our App!</string>
    <string name="please_sign_up_to_continue">Please Register to continue…</string>
    <string name="sign_in1">Sign In</string>
    <string name="home">Home</string>
    <string name="sign">Sign</string>
    <string name="login">Login</string>
    <string name="logout">LogOut</string>
    <string name="register">Register</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="support">Support</string>
    <string name="main">Main</string>
    <string name="welcome_to_home_page">Welcome to Home Page</string>
</resources>